# caldeira

./: .gitignore  Cargo.toml  README.md  compile_shaders.bat
.github/workflows/: rust.yml
app/: Cargo.toml  build.rs
app/src/: main.rs
caldeira/: Cargo.toml
caldeira/src/: consts.rs  lib.rs  utils.rs  vulkan.rs
caldeira/src/vulkan/: buffer.rs  byte_copiable.rs  command_pool.rs  compute_pipeline.rs  debug.rs  descriptor.rs  descriptor_pool.rs  descriptors.rs  device.rs  image.rs  instance.rs  queue.rs  window.rs
examples/: perlin_noise.comp  simplex_try.comp
shaders/: compute.comp  compute.comp.spv  compute.spv
