[package]
name = "app"
version = "0.1.0"
authors = ["Jean CASPAR <jean.caspar67610@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
winit = "0.22.2"
log = "0.4.8"
pretty_env_logger = "0.4.0"
caldeira = { path = "../caldeira" }

[features]
validation-layers = ["caldeira/validation-layers"]
default = ["validation-layers"]