[package]
name = "app"
version = "0.1.0"
authors = ["Jean CASPAR <jean.caspar67610@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alignas = "0.2.0"
ash = "0.31.0"
caldeira = { path = "../caldeira" }
image = "0.23.4"
log = "0.4.8"
memoffset = "0.5.4"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
renderdoc = "0.9.0"
winit = "0.22.2"

[features]
validation-layers = ["caldeira/validation-layers"]
default = ["validation-layers"]
