[package]
authors = ["Jean CASPAR <jean.caspar67610@gmail.com>"]
edition = "2018"
name = "caldeira"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
image = "0.23.8"
log = "0.4.11"
winit = "0.22.2"

[features]
validation-layers = []
